# medialang

./: .gitignore  COVER_LETTER_TO_MDSL_LLM.md  Cargo.toml  README.md  anmi-mdsl-interface.md  anmi_ownership_model_graph_er.jsx  llm-communication-protocol.md  mdsl-llm-collaboration-guide.md
.claude/: settings.local.json
MediaLanguage/: MedienangeboteDiachroneBeziehungen.mdsl  MedienangeboteSynchroneBeziehungen.mdsl  Medienunternehmen.mdsl  MedienunternehmenDiachroneBeziehungen.mdsl.mdsl  MedienunternehmenSynchroneBeziehungenMitAnderenUnternehmen.mdsl  MedienunternehmenSynchroneBeziehungenMitMedienangeboten.mdsl  anmi_common_codes.mdsl  anmi_core_entity_units.mdsl  anmi_main.mdsl  anmi_mandate_types.mdsl  anmi_market_data_schemas.mdsl  anmi_media_sectors.mdsl  anmi_source_references.mdsl  express_freeze3.mdsl  review.medialang  sources.mdsl
konzeption/: ANMI_Konzeption_Datenbankstruktur_v16.1.docx
mdsl-rs/: Cargo.toml  GUI_MDSL_GENERATION_GUIDE.md  README-LLM-COMPREHENSIVE.md  anmi_full_export.mdsl  anmi_generated_sample.mdsl  anmi_sample.mdsl  complete_anmi_full_fixed.mdsl  debug_1811_issue.mdsl  graph_comparison.sh  graph_comparison_clean.sh  load_cypher_lines.sh  load_to_neo4j.sh  orf_complete_network.cypher  orf_complete_network.mdsl  syntax_corrected.mdsl  validation_clean.mdsl  validation_final.mdsl  validation_sample.mdsl
mdsl-rs/docs/: CHANGELOG.md  EVENT_EXAMPLES.md  EVENT_SUPPORT.md  GRAMMAR_CHANGES.md  SQL_IMPORT_GUIDE.md
mdsl-rs/docu/: project_structure.md
mdsl-rs/examples/: kronen_zeitung_output.cypher  kronen_zeitung_output.sql  simple_example.mdsl
mdsl-rs/grammar/: mdsl.ebnf
mdsl-rs/gui_generated/: anmi_refresh_2025-08-06T02-04-10.mdsl  temp_2025-08-06T01-59-06.mdsl
mdsl-rs/output/: express_freeze3.cypher  express_freeze3.sql  kronen_zeitung_freeze3.cypher  kronen_zeitung_freeze3.sql
mdsl-rs/scripts/: README.md  test_examples.sh  validate_all.sh
mdsl-rs/src/: error.rs  lib.rs  main.rs  neo4j.rs
mdsl-rs/src/assistant/: completion.rs  explanation.rs  knowledge.rs  mod.rs
mdsl-rs/src/codegen/: common.rs  cypher.rs  cypher.rs.backup  mod.rs  sql.rs  sql_anmi.rs
mdsl-rs/src/import/: connection.rs  generator.rs  mapper.rs  mod.rs
mdsl-rs/src/ir/: mod.rs  nodes.rs  transformer.rs
mdsl-rs/src/lexer/: mod.rs  scanner.rs  token.rs
mdsl-rs/src/parser/: ast.rs  error.rs  mod.rs  recursive_descent.rs
mdsl-rs/src/semantic/: mod.rs  symbol_table.rs  type_checker.rs  validator.rs
mdsl-rs/src/utils/: mod.rs  source_map.rs
mdsl-rs/tests/: README.md  bootstrap_tests.rs  codegen_tests.rs  construct_tests.md  construct_tests.rs  error_tests.rs  import_tests.rs  integration_tests.rs  ir_tests.rs  sector_tests.rs  semantic_tests.rs  test_runner.rs  unit_tests.rs  validation_tests.rs
mdsl-rs/tests/fixtures/: README.md  test_input.mdsl  test_variable_refs.mdsl  test_variables.mdsl
output/: README.md
paper/: anmi_ml_paper.aux  anmi_ml_paper.bbl  anmi_ml_paper.blg  anmi_ml_paper.fdb_latexmk  anmi_ml_paper.fls  anmi_ml_paper.md  anmi_ml_paper.out  anmi_ml_paper.tex  cover_letter.tex  (+1 more)
paper-amendment20260417/: anmi_ml_paper.bbl
(+34 files in other folders)
